fix: no more extra padding on mobile view

--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -6,22 +6,30 @@
     .NAVTEXT {
         font-size: 16px;
         display: block;
+        width: 100%;
     }
+
     .sticky {
         position: fixed;
         width: 100%;
     }
+
     .MLH-banner {
         width: 170px;
         height: 50px;
         position: fixed;
         margin: 0% 0% 0% .3%;
+
+        @media only screen and (max-width: 420px) {
+          width: 60px;
+        }
     }
 
     .MLH{
         position: -webkit-sticky;
         position: sticky;
     }
+
     .active:active {
         background-color: white;
     }
